--- a/AtsUtilities.WindowTest/AtsUtilities.WindowTest.csproj
+++ b/AtsUtilities.WindowTest/AtsUtilities.WindowTest.csproj
@@ -6,11 +6,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AB1F392D-CDBA-4D1D-9FD4-D259CDFB4227}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>AtsUtilities.DpsLookUpParserWithProgress</RootNamespace>
-    <AssemblyName>AtsUtilities.DpsLookUpParserWithProgress</AssemblyName>
+    <RootNamespace>AtsUtilities.WindowTest</RootNamespace>
+    <AssemblyName>AtsUtilities.WindowTest</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,18 +45,24 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDriver, Version=3.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.8.0\lib\net45\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=3.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.8.0\lib\net45\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DpsLookUpParserWithProgressWindow.cs">
+    <Compile Include="DpsLookUpWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DpsLookUpParserWithProgressWindow.Designer.cs">
-      <DependentUpon>DpsLookUpParserWithProgressWindow.cs</DependentUpon>
+    <Compile Include="DpsLookUpWindow.Designer.cs">
+      <DependentUpon>DpsLookUpWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DpsLookUpParserWithProgressWindow.resx">
-      <DependentUpon>DpsLookUpParserWithProgressWindow.cs</DependentUpon>
+    <EmbeddedResource Include="DpsLookUpWindow.resx">
+      <DependentUpon>DpsLookUpWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -64,7 +72,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -79,10 +89,20 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AtsUtilities.DpsLookUpParser\AtsUtilities.DpsLookUpParser.csproj">
-      <Project>{b8cabb75-4165-46b7-8fc4-d258002e7360}</Project>
-      <Name>AtsUtilities.DpsLookUpParser</Name>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AtsUtilities.DpsLookUp\AtsUtilities.DpsLookUp.csproj">
+      <Project>{a827cfa0-b728-4302-8bed-6ff9b064246a}</Project>
+      <Name>AtsUtilities.DpsLookUp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Selenium.PhantomJS.WebDriver.2.1.1\build\Selenium.PhantomJS.WebDriver.targets" Condition="Exists('..\packages\Selenium.PhantomJS.WebDriver.2.1.1\build\Selenium.PhantomJS.WebDriver.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Selenium.PhantomJS.WebDriver.2.1.1\build\Selenium.PhantomJS.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.PhantomJS.WebDriver.2.1.1\build\Selenium.PhantomJS.WebDriver.targets'))" />
+  </Target>
 </Project>
